# ASimpleProducerConsumer

./: CMakeLists.txt  README.md  test
include/: InputBuffer.h  OutputBuffer.h  main.h
src/: InputBuffer.cpp  OutputBuffer.cpp  main.cpp
